ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'radix')
ent_conf.set('PACKAGE_BUGREPORT', 'https://github.com/parroyo/LibRadix/issues/new/')
ent_conf.set('PACKAGE_NAME', 'radix')
ent_conf.set('PACKAGE_STRING', 'radix')
ent_conf.set('PACKAGE_TARNAME', 'radix')
ent_conf.set('PACKAGE_URL', 'FIXME')
ent_conf.set('PACKAGE_VERSION', libradix_version)
ent_conf.set('PACKAGE_API_VERSION', libradix_api_version)
configure_file(
  input: 'gtkdocentities.ent.in',
  output: 'gtkdocentities.ent',
  configuration: ent_conf
)
